--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-cssnano": "^1.1.0",
     "grunt-sass": "^1.2.0",
+    "grunt-zip-directories": "^0.1.3",
     "load-grunt-tasks": "^3.2.0"
   },
   "dependencies": {}
