Dynamically size wbs description inputs, add title tooltip, remove local fonts folder in favor of web fonts.
Update extension manifest

--- a/etc_extension/manifest.json
+++ b/etc_extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Esri ETC Redesign",
+  "name": "ETC+",
   "short_name": "Esri ETC",
   "description": "An alternate skin for the electronic time card webapp used by esri",
   "version": "1.0.1",
@@ -19,19 +19,20 @@
         "*://*.selfservice/etc/cfdocs/detail*"
       ],
       "css": ["styles/style.min.css", "styles/font-awesome.min.css"],
-      "js": ["scripts/jquery-3.0.0.min.js", "scripts/script.min.js"]
+      "js": ["scripts/jquery-3.0.0.min.js", "scripts/script.min.js", "scripts/fontAwesome.js"]
     }
   ],
 
   "web_accessible_resources": [
     "images/*.png",
     "styles/*.css",
-    "scripts/*.js",
-    "fonts/*"
+    "scripts/*.js"
   ],
 
   "permissions": [
     "http://fonts.googleapis.com/",
-    "https://fonts.googleapis.com/"
+    "https://fonts.googleapis.com/",
+    "*://*.fonticons.com/*",
+    "*://use.fontawesome.com/*"
   ]
 }
