--- a/etc_extension/manifest.json
+++ b/etc_extension/manifest.json
@@ -4,7 +4,7 @@
   "name": "ETC+",
   "short_name": "Esri ETC",
   "description": "An alternate skin for the electronic time card webapp used by esri",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "Cody Lawson",
 
   "icons": {
@@ -18,15 +18,16 @@
       "matches": [
         "*://*.selfservice/etc/cfdocs/detail*"
       ],
-      "css": ["styles/style.min.css", "styles/font-awesome.min.css"],
-      "js": ["scripts/jquery-3.0.0.min.js", "scripts/script.min.js", "scripts/fontAwesome.js"]
+      "css": ["styles/style.min.css", "styles/font-awesome.css"],
+      "js": ["scripts/jquery-3.0.0.min.js", "scripts/script.min.js"]
     }
   ],
 
   "web_accessible_resources": [
     "images/*.png",
     "styles/*.css",
-    "scripts/*.js"
+    "scripts/*.js",
+    "fonts/*"
   ],
 
   "permissions": [
